--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,12 +1,13 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn-success">New Recipe</button>
+    <button class="btn btn-success" routerLink="new" (click)="onNewRecipe()">New Recipe</button>
   </div>
   <div class="row">
     <div class="col-xs-12">
-        <app-recipe-item *ngFor=" let recipeEl of recipes"
+        <app-recipe-item *ngFor=" let recipeEl of recipes; let i = index"
                           [recipe]="recipeEl"
-              (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipe-item>
+                         [index]="i"
+              ></app-recipe-item>
     </div>
   </div>
 </div>
