--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,14 +1,9 @@
  <div class="row">
     <div class="col-md-5">
-      <app-recipe-list (recipeSelected)="selectRecipe = $event"></app-recipe-list>
+      <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-xs-7">
-      <app-recipe-detail
-        *ngIf="selectRecipe; else info"
-        [recipe]=selectRecipe></app-recipe-detail>
-      <ng-template #info>
-        <p>Please select a recipe </p>
-      </ng-template>
+      <router-outlet></router-outlet>
     </div>
 
   </div>
